production/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ocean-forecast
  labels:
    name: ocean-forecast
    app: ocean-plastic-forecast
